Remove box behind create your own section. Make option boxes sit horizontally. Fix CSS issues with layout.

--- a/menu/static/menu/css/menu.css
+++ b/menu/static/menu/css/menu.css
@@ -6,10 +6,6 @@ body {
     color: var(--text-color, #333);
     max-width: 80%;
     margin: auto;
-    /* background-image: url("/static/menu/images/pizza-wallpaper.webp");
-    background-size: cover;
-    background-repeat: repeat;
-    background-position: center; */
 }
 
 main {
@@ -106,15 +102,12 @@ li {
 }
 
 .pizza-item-create {
-    background-color: white;
-    border-radius: 8px;
-    padding: 15px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     box-sizing: border-box;
+    gap: 20px;
     margin-bottom: 20px;
 }
 
@@ -137,7 +130,7 @@ li {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     text-align: left;
     margin-bottom: 15px;
-    width: calc(50% - 20px);
+    width: calc(25% - 20px);
     box-sizing: border-box;
 }
 
